# cprel-music

./: CMakeLists.txt  canon.cpp  midi-extractor.cpp  midi-properties.cpp  midi.cpp  transformer.cpp  transformer.hh  use-clang.patch
cmake-support/: FindCompiler.cmake  FindCprel.cmake  FindGecode.cmake  FindJdksmidi.cmake
tools/: csvreader.cpp  csvreader.hh
